<resources>
    <string name="app_name">Unit Converter</string>
    <string name="unit_converter">Unit Converter</string>
    <string name="by">By</string>
    <string name="pradyunya_chunchwar">Pradyunya Chunchwar</string>
    <string name="todo">TODO</string>
    <string name="input">Input</string>
    <string name="convert_to">Convert To</string>
    <string name="from">From</string>
    <string name="category">Category</string>
    <string name="length">Length</string>
    <string name="Length">Length</string>
    <string name="weight">Weight</string>
    <string name="Temperature" />
    <string name="temperature">Temperature</string>
    <string name="From">From</string>
    <string name="convert_To">Convert To</string>
    <string name="calculate">Calculate</string>
    <string name="inputs">Input</string>
    <string name="Input">Input</string>
    <string name="regex">^-?\\d+(\\.\\d+)?$</string>
    <string name="convert">Convert</string>
    <string name="length_converter">Length Converter</string>
    <string name="convert1">Convert</string>
    <string name="temperature_converter">Temperature Converter</string>
    <string name="convert2">Convert</string>
    <string name="weight_converter">Weight Converter</string>
</resources>